# comicode

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  README.md  coverage.json  loop.sh  loop_fallback.sh  main.py  pyproject.toml  test_curve_function.py  test_xkcd_style.py
.claude/: settings.local.json
comix/: __init__.py  __main__.py  constants.py
comix/animation/: __init__.py  animation.py  easing.py  timeline.py
comix/cobject/: __init__.py  cobject.py
comix/effect/: __init__.py  effect.py
comix/layout/: __init__.py  constraints.py  flow.py  grid.py
comix/page/: __init__.py  book.py  page.py  templates.py
comix/parser/: __init__.py  parser.py
comix/preview/: __init__.py  server.py
comix/renderer/: __init__.py  cairo_renderer.py  gif_renderer.py  html_renderer.py  svg_renderer.py  video_renderer.py
comix/style/: __init__.py  font.py  style.py  theme.py
comix/utils/: __init__.py  bezier.py  geometry.py  script_loader.py  sketchy.py
examples/: 01_simple_dialogue.py  02_four_panel_comic.py  03_group_scene.py  04_expressions.py  05_bubble_types.py  06_multi_page_pdf.py  07_custom_layout.py  08_manual_positioning.py  09_using_templates.py  10_error_handling.py  11_html_export.py  12_parser_dsl.py  13_visual_effects.py  14_animation_export.py  15_video_export.py  16_character_types.py  17_ai_image_generation.py  18_flow_layout.py  19_constraint_layout.py  20_themes_and_styles.py  21_text_and_narration.py  22_advanced_templates.py  23_preview_server.py  24_new_templates.py  25_panel_shapes.py  26_stickman_articulation.py  27_xkcd_style.py  28_curved_limbs_demo.py  29_curve_test.py  30_svg_test.py  31_direct_style_test.py  32_curved_limbs_test.py  33_xkcd_with_curves.py  README.md
examples/output/: 11_html_book.html  11_html_dark.html  11_html_minimal.html  11_html_simple.html  15_video_movement.webm  README.md
specs/: CRITICAL-BUGS-AND-FIXES.md  PRD.md  README.md  ai-images.md  animation-export.md  bubble-tail-improvements.md  character-basics.md  code-visual-validation.md  effect-system.md  examples-maintenance.md  getting-started.md  html-export.md  page-rendering.md  panel-shapes.md  parser-dsl.md  speech-bubbles.md  stickman-articulation.md  stickman-reference-based.md  visual-validation-requirements.md  working-examples.md
specs/future-features/: README.md  animation-export.md  parser-dsl.md  (+2 more)
tests/: __init__.py  test_animation.py  test_book.py  test_bubble.py  test_cairo_renderer.py  test_character.py  test_cli.py  test_cobject.py  test_constants.py  test_constraints.py  test_effect.py  test_font.py  test_gif_renderer.py  test_html_renderer.py  test_image.py  test_layout.py  test_package_imports.py  test_page.py  test_panel.py  test_parser.py  test_preview.py  test_renderer.py  test_script_loader.py  test_shapes.py  test_style.py  test_templates.py  test_text.py  test_theme.py  test_utils.py  test_video_renderer.py
(+13 files in other folders)
