[project]
name = "comicode"
version = "0.1.0"
description = "Code-based comic creation framework inspired by Manim"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "svgwrite>=1.4.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "fonttools>=4.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
]
cairo = [
    "pycairo>=1.26.0",
    "Pillow>=10.0.0",
]
ai = [
    "openai>=1.0.0",
    "replicate>=0.5.0",
]
web = [
    "watchdog>=4.0.0",
]

[project.scripts]
comix = "comix.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["comix"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
